# dotfiles

./: .Xresources  .bashrc  .conkyrc  .eslintrc.js  .tern-config  .vimrc  .vimrc_minimalistic  .wezterm.lua  .zshrc  .zshrc-archlinux  01_plugin_init.vim  02_general_settings.vim  02_plugin_settings.vim  03_misc_settings.vim  03_plugin_settings.vim  04_appearance.vim  README.md  Revised_Debian10_Setup.md  Revised_Debian10_Setup.txt  cider  coc-settings.json  compile_flags.txt  configuration.nix  configuration_aarch64.nix  ginit.vim  home.nix  init.vim  init.vim-coc.nvim  init.vim-deoplete-ale  init.vim.coc  init.vim.coc.nvim  init.vim.coc.nvim.freebsd  init.vim.deoplete  init.vim.deoplete.new  init.vim.monolithic  init.vim.ncm2  init.vim.termux  nixos_install.txt  pyproject.toml  shell.nix  (+3 more)
.config/helix/: config.toml  languages.toml
.config/jgmenu/: append.csv  (+2 more)
nixos/: configuration.nix  home.nix  init.lua  lsp.lua  lunarvim-darkplus.nix  neovim.nix  options.lua  pyshell.nix  riscv32-toolchain.nix  treesitter.lua
os_setups/: Debian 11 setup 2021 (New).md  Debian 11 setup 2021 (New).txt  Debian 11 setup 2022 (New).md  Debian Script.md  MacOS M1 Development Setup.md  NixOS_Install.md  Old_Debian_10_setup.md  OpenSuse-PostInstall.txt  Ubuntu_Distrobox_setup.md  debian-11-install.sh  debian-12-gnome-setup.sh  debian-12-setup  debian-12-setup.sh  debian-testing-install.sh  debian-xfce-install.sh  debian13-nix-install.md  debiansnapinstall.sh  distrobox-arch-postinstall.sh  install_R_in_jupyter.txt  new-debian-install.sh  void_linux_setup.md  void_linux_setup.txt  xubuntu-post-install.sh
wallpapers/: wallpapers.md
(+58 files in other folders)
