[project]
name = "datasci"
version = "0.1.0"
description = "Data Science Environment with Pytorch and Tensorflow (CPU)"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "gmpy2>=2.2.1",
    "jupyter>=1.1.1",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pyarrow>=19.0.1",
    "pyjanitor>=0.31.0",
    "python-lsp-ruff>=2.2.2",
    "ruff-lsp>=0.0.62",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
    "tensorflow-cpu>=2.18.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "yfinance>=0.2.55",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

torchaudio = [
    { index = "pytorch-cpu" },
]

torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
